fixed squishy images

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -175,10 +175,12 @@ nav {
     .link, .search-result {
         display: grid;
         margin-bottom: 1em;
-        grid-template-columns: fit-content(7rem) 1fr 3rem;
+        grid-template-columns: 5rem 1fr 3rem;
         background: $g3;
-        img {
-            height: 100%;
+        .img {
+            padding: 50%;
+            background-position: center;
+            background-size: cover;
         }
         .body {
             display: flex;
@@ -198,6 +200,24 @@ nav {
                 color: $w3;
                 margin-bottom: -.5em;
             }
+        }
+    }
+}
+#mediaSearchResults {
+    .search-result, .links {
+        grid-template-columns: 4rem 1fr 3rem;
+    }
+    .link {
+        .img {
+            padding: 70% 0;
+        }
+    }
+}
+#profile-links {
+    .link {
+        grid-template-columns: 9rem 1fr 3rem;
+        .img {
+            padding: 50% 0;
         }
     }
 }
@@ -233,11 +253,6 @@ nav {
             color: $w1;
             cursor: pointer;
         }
-    }
-}
-#mediaSearchResults {
-    .search-result {
-        grid-template-columns: fit-content(4.5rem) 1fr 3rem;
     }
 }
 #selectedMedia, #selectedMusic {
